--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,12 @@ Section: python
 Priority: optional
 Maintainer: Adam Cécile (Le_Vert) <gandalf@le-vert.net>
 Build-Depends: debhelper (>= 5.0.37.2)
-Build-Depends-Indep: python-all-dev, python-all, python-support (>= 0.4)
-Standards-Version: 3.7.2
+Build-Depends-Indep: python-all, python-support (>= 0.4)
+Standards-Version: 3.9.3
 
 Package: python-dialog
 Architecture: all
-Depends: ${python:Depends}, dialog
+Depends: ${python:Depends}, ${misc:Depends}, dialog
 Provides: ${python:Provides}
 Description: Python module for making simple Text/Console-mode user interfaces
  This is a Python module for doing console-mode user interaction.
