--- a/debian/rules
+++ b/debian/rules
@@ -44,5 +44,10 @@ binary-indep: build install
 
 binary-arch: build install
 
+build-arch: build
+
+build-indep: build
+
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
+
+.PHONY: build clean binary-indep binary-arch binary install build-arch build-indep
